# stephansdom_timepunch

./: .env.example  .gitignore  README  docker-compose.yml  package-lock.json  presentation.docx  pyproject.toml  timepunch.db
backend/: Dockerfile  database.py  email_utils.py  main.py  models.py  schemas.py  seed.py
backend/routers/: __init__.py  admin.py  auth.py  messages.py  time_entries.py
frontend/: .env.local  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/pages/: Admin.jsx  Dashboard.jsx  Dienstplan.jsx  ForgotPassword.jsx  Login.jsx  ResetPassword.jsx
